# messaging

./: .gitignore  CMakeLists.txt
include/messaging/: exception.hpp  messaging.h  messaging.hpp  messaging_endpoint.hpp
include/messaging/defines/export/: export.h
include/messaging/defines/handle/: opaque.h
include/messaging/endpoint/: endpoint_init.h  endpoint_manip.h
include/messaging/endpoint/details/: endpoint_init.h  endpoint_type.h
include/messaging/interface/: messaging.h  opcode.h
include/messaging/interface/format/kernel/: format.h  format_modules.h
include/messaging/message/details/: message_init.h  message_type.h
include/messaging/route/details/: route_endpoint.h  route_init.h  route_type.h
libs/x64/debug/: synapse-messaging-debug.lib  synapse-messaging-endpoint.idb  synapse-messaging-endpoint.lib  synapse-messaging-message.idb  synapse-messaging-message.lib  synapse-messaging-route.idb  synapse-messaging-route.lib
project_files/vs2022/synapse-messaging/: synapse-messaging.sln
project_files/vs2022/synapse-messaging/synapse-messaging-cpp/: synapse-messaging-cpp.vcxproj  synapse-messaging-cpp.vcxproj.filters
project_files/vs2022/synapse-messaging/synapse-messaging-cpp/x64/Debug/synapse-.0c559a03.tlog/: CL.command.1.tlog  (+5 more)
project_files/vs2022/synapse-messaging/synapse-messaging-dll/: synapse-messaging-dll.vcxproj  synapse-messaging-dll.vcxproj.filters
project_files/vs2022/synapse-messaging/synapse-messaging-dll/x64/Debug/: synapse-messaging-dll.dll.recipe  synapse-messaging-dll.ilk  vc143.idb
project_files/vs2022/synapse-messaging/synapse-messaging-endpoint/: synapse-messaging-endpoint.vcxproj  synapse-messaging-endpoint.vcxproj.filters
project_files/vs2022/synapse-messaging/synapse-messaging-include/: synapse-messaging-include.vcxproj  synapse-messaging-include.vcxproj.filters
project_files/vs2022/synapse-messaging/synapse-messaging-message/: synapse-messaging-message.vcxproj  synapse-messaging-message.vcxproj.filters
project_files/vs2022/synapse-messaging/synapse-messaging-route/: synapse-messaging-route.vcxproj  synapse-messaging-route.vcxproj.filters
project_files/vs2022/synapse-messaging/x64/Debug/: synapse-messaging-dll.exp  synapse-messaging-endpoint.idb  synapse-messaging-endpoint.lib  synapse-messaging-message.idb  synapse-messaging-message.lib  synapse-messaging-route.idb  synapse-messaging-route.lib
source/: messaging.c  messaging.cpp  messaging_endpoint.cpp
source/c/: CMakeLists.txt
source/c/endpoint/: endpoint_init.c
source/c/message/details/: details_message_init.c
source/c/route/details/: details_route_endpoint.c  details_route_init.c
source/cpp/: CMakeLists.txt
source/endpoint/: endpoint_init.c  endpoint_manip.c
source/endpoint/details/: details_endpoint_init.c
source/message/details/: details_message_init.c
source/route/details/: details_route_endpoint.c  details_route_init.c
source/shared_libs/: CMakeLists.txt
(+26 files in other folders)
